# rust-basic

./: README.md
01_getting_started/: Cargo.toml  explanation.md
01_getting_started/exercises/: README.md
01_getting_started/exercises/solutions/ex1_hello_name/: Cargo.toml  main.rs
01_getting_started/exercises/solutions/ex2_number_guessing/: Cargo.toml  main.rs
01_getting_started/exercises/solutions/ex3_calculator/: Cargo.toml
01_getting_started/exercises/solutions/ex4_file_reader/: Cargo.toml
01_getting_started/solutions/ex3_calculator/: main.rs
01_getting_started/solutions/ex4_file_reader/: main.rs
01_getting_started/src/: main.rs
02_basic_concepts/: Cargo.toml  explanation.md
02_basic_concepts/exercises/: README.md
02_basic_concepts/exercises/solutions/ex1_temperature/: Cargo.toml
02_basic_concepts/exercises/solutions/ex2_fibonacci/: main.rs
02_basic_concepts/exercises/solutions/ex3_patterns/: Cargo.toml  main.rs
02_basic_concepts/exercises/solutions/ex4_analyzer/: main.rs
02_basic_concepts/solutions/ex1_temperature/: main.rs
02_basic_concepts/solutions/ex5_shell/: main.rs
02_basic_concepts/src/: main.rs
03_ownership_borrowing/: Cargo.toml  explanation.md
03_ownership_borrowing/exercises/: README.md
03_ownership_borrowing/exercises/solutions/ex1_string_manipulator/: Cargo.toml
03_ownership_borrowing/exercises/solutions/ex2_text_analyzer/: Cargo.toml  main.rs
03_ownership_borrowing/exercises/solutions/ex4_document_manager/: Cargo.toml
03_ownership_borrowing/exercises/solutions/ex5_linked_list/: main.rs
03_ownership_borrowing/solutions/ex1_string_manipulator/: main.rs
03_ownership_borrowing/solutions/ex3_custom_vector/: Cargo.toml  main.rs
03_ownership_borrowing/solutions/ex4_document_manager/: main.rs
03_ownership_borrowing/solutions/ex5_linked_list/: Cargo.toml
03_ownership_borrowing/src/: main.rs
04_structs_enums/: Cargo.toml  explanation.md
04_structs_enums/exercises/: README.md
04_structs_enums/exercises/solutions/ex1_shape_calculator/: Cargo.toml
04_structs_enums/exercises/solutions/ex3_game_characters/: Cargo.toml
04_structs_enums/exercises/solutions/ex4_custom_option/: Cargo.toml  main.rs
04_structs_enums/solutions/ex1_shape_calculator/: main.rs
04_structs_enums/solutions/ex2_library/: Cargo.toml  main.rs
04_structs_enums/solutions/ex3_game_characters/: main.rs
04_structs_enums/solutions/ex5_state_machine/: Cargo.toml  main.rs
04_structs_enums/src/: main.rs
05_collections_error_handling/: Cargo.toml  explanation.md
05_collections_error_handling/exercises/: README.md
05_collections_error_handling/exercises/solutions/ex2_error_handling/: Cargo.toml
05_collections_error_handling/exercises/solutions/ex2_error_handling/src/: main.rs
05_collections_error_handling/exercises/solutions/ex3_hashmap/src/: main.rs
05_collections_error_handling/exercises/solutions/ex4_custom_errors/: Cargo.toml
05_collections_error_handling/exercises/solutions/ex5_advanced_collections/: Cargo.toml
05_collections_error_handling/exercises/solutions/ex5_advanced_collections/src/: main.rs
05_collections_error_handling/solutions/ex1_vector_ops/: Cargo.toml
05_collections_error_handling/solutions/ex1_vector_ops/src/: main.rs
05_collections_error_handling/solutions/ex3_hashmap/: Cargo.toml
05_collections_error_handling/solutions/ex4_custom_errors/src/: main.rs
05_collections_error_handling/src/: main.rs
06_modules_and_crates/solutions/01_math_utils/: Cargo.toml
06_modules_and_crates/solutions/01_math_utils/src/: arithmetic.rs  lib.rs  statistics.rs
06_modules_and_crates/solutions/01_math_utils/src/geometry/: mod.rs  shapes.rs  transformations.rs
06_modules_packages/: Cargo.toml  explanation.md
06_modules_packages/exercises/: README.md
06_modules_packages/exercises/solutions/ex1_library_crate/src/: lib.rs
06_modules_packages/exercises/solutions/ex1_library_crate/src/algebra/: polynomial.rs
06_modules_packages/exercises/solutions/ex1_library_crate/src/statistics/: probability.rs
06_modules_packages/exercises/solutions/ex2_binary_crate/: Cargo.toml
06_modules_packages/exercises/solutions/ex2_binary_crate/src/commands/: mod.rs  stats.rs
06_modules_packages/exercises/solutions/ex3_workspace/: Cargo.toml
06_modules_packages/exercises/solutions/ex3_workspace/task-cli/: Cargo.toml
06_modules_packages/exercises/solutions/ex3_workspace/task-common/: Cargo.toml
06_modules_packages/exercises/solutions/ex3_workspace/task-server/: Cargo.toml
06_modules_packages/exercises/solutions/ex4_plugin_system/text-core/: Cargo.toml
06_modules_packages/solutions/ex1_library_crate/: Cargo.toml
06_modules_packages/solutions/ex1_library_crate/src/algebra/: linear.rs  mod.rs
06_modules_packages/solutions/ex1_library_crate/src/geometry/: mod.rs  shapes.rs  transformations.rs
06_modules_packages/solutions/ex1_library_crate/src/statistics/: descriptive.rs  mod.rs
06_modules_packages/solutions/ex2_binary_crate/src/: main.rs
06_modules_packages/solutions/ex2_binary_crate/src/commands/: convert.rs  search.rs
06_modules_packages/solutions/ex2_binary_crate/src/processors/: data.rs  file_search.rs  stats.rs
06_modules_packages/solutions/ex3_workspace/task-server/src/: main.rs
06_modules_packages/solutions/ex4_plugin_system/plugins/lowercase/: Cargo.toml
06_modules_packages/solutions/ex4_plugin_system/plugins/reverse/: Cargo.toml
06_modules_packages/solutions/ex4_plugin_system/plugins/uppercase/: Cargo.toml
06_modules_packages/solutions/ex4_plugin_system/text-core/src/: main.rs
06_modules_packages/solutions/ex4_plugin_system/text-plugin-api/: Cargo.toml
06_modules_packages/solutions/ex4_plugin_system/text-plugin-api/src/: lib.rs
06_modules_packages/src/: lib.rs  main.rs
06_modules_packages/src/back_of_house/: cooking.rs  inventory.rs  mod.rs
06_modules_packages/src/front_of_house/: hosting.rs  mod.rs
07_common_concepts/: Cargo.toml  explanation.md
07_common_concepts/exercises/: README.md
07_common_concepts/src/: lib.rs  main.rs
07_common_concepts/tests/: integration_test.rs
(+71 files in other folders)
