[package]
name = "getting_started"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0.4"  # For colorful output in examples
rand = "0.8.5"     # For number guessing game

[[bin]]
name = "hello_name"
path = "exercises/solutions/ex1_hello_name/src/main.rs"

[[bin]]
name = "number_guessing"
path = "exercises/solutions/ex2_number_guessing/src/main.rs"

[[bin]]
name = "calculator"
path = "exercises/solutions/ex3_calculator/src/main.rs"

[[bin]]
name = "file_reader"
path = "exercises/solutions/ex4_file_reader/src/main.rs"

# Additional exercise binaries will be added here as they are implemented 