[package]
name = "structs_enums"
version = "0.1.0"
edition = "2021"

[dependencies]
# Common dependencies for structs and enums exercises
rand = "0.8.5"     # For game mechanics and state machine simulation
chrono = "0.4"     # For library management timestamps
serde = { version = "1.0", features = ["derive"] }  # For serialization
serde_json = "1.0" # For JSON handling

[[bin]]
name = "shape_calculator"
path = "exercises/solutions/ex1_shape_calculator/src/main.rs"

[[bin]]
name = "library_management"
path = "exercises/solutions/ex2_library_management/src/main.rs"

[[bin]]
name = "game_characters"
path = "exercises/solutions/ex3_game_characters/src/main.rs"

[[bin]]
name = "custom_option"
path = "exercises/solutions/ex4_custom_option/src/main.rs"

[[bin]]
name = "state_machine"
path = "exercises/solutions/ex5_state_machine/src/main.rs"

# Additional exercise binaries will be added here as they are implemented 