[package]
name = "modules_packages"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"  # For random number generation in examples

[lib]
name = "restaurant"
path = "src/lib.rs"

[[bin]]
name = "restaurant_main"
path = "src/main.rs"

[[bin]]
name = "module_exercise1"
path = "exercises/solutions/ex1_module_basics/src/main.rs"

[[bin]]
name = "module_exercise2"
path = "exercises/solutions/ex2_visibility/src/main.rs"

[[bin]]
name = "module_exercise3"
path = "exercises/solutions/ex3_package_organization/src/main.rs"

# Additional exercise binaries will be added here as they are implemented 