[package]
name = "common_concepts"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependencies for common concepts examples and exercises
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "common_concepts"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "generics_basics"
path = "exercises/solutions/ex1_generics_basics/src/main.rs"

[[bin]]
name = "trait_implementations"
path = "exercises/solutions/ex2_trait_implementations/src/main.rs"

[[bin]]
name = "lifetime_examples"
path = "exercises/solutions/ex3_lifetime_examples/src/main.rs"

[[bin]]
name = "smart_pointers"
path = "exercises/solutions/ex4_smart_pointers/src/main.rs"

[[bin]]
name = "advanced_traits"
path = "exercises/solutions/ex5_advanced_traits/src/main.rs"

# Additional exercise binaries will be added here as they are implemented 