[package]
name = "file_processor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A command-line file processing utility"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8" 