[workspace]
name = "task_manager"
version = "0.1.0"
edition = "2021"

members = [
    "task-common",
    "task-server",
    "task-cli"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3" 