[package]
name = "task-server"
version = "0.1.0"
edition = "2021"

[dependencies]
task-common = { path = "../task-common" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true } 